<resources>
    <string name="app_name">OdevProje</string>
    <string name="bot">Boots</string>
    <string name="sneakers">Sneakers</string>
    <string name="sandalet">Sandals</string>
    <string name="siparisver">Order Now</string>
    <string name="topsneakers">Top Sneakers</string>
    <string name="hepsinigor">View All</string>
    <string name="fiyat1">$ 130</string>
    <string name="fiyat2">$ 110</string>
    <string name="ayakkabi_baslik_1">Nike Air Max Plus</string>
    <string name="ayakkabi_baslik_2">Nike Air Max</string>

</resources>